--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Monitoring</title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    
+
     <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
     <!-- <script src="bootstrap/https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -41,9 +41,14 @@
             <li><a data-toggle="pill" href="#contracts">Service Contracts</a></li>
             <li><a data-toggle="pill" href="#contacts">Contacts</a></li>
             <li><a data-toggle="pill" href="#cases">Cases</a></li>
+            <li><a data-toggle="pill" href="#history">History</a></li>
             <li><a data-toggle="pill" href="#developer">Developer</a></li>
-            <li><button id="refreshBtn" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-flash"></span>Refresh</button></li>
-            <li><button id="loginBtn" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-user"></span><span id="login">Login</span></button></li>
+            <li>
+                <button id="refreshBtn" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-flash"></span>Refresh</button>
+            </li>
+            <li>
+                <button id="loginBtn" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-user"></span><span id="login">Login</span></button>
+            </li>
         </ul>
         <div class="tab-content">
             <div id="summary" class="tab-pane fade in active">
@@ -124,6 +129,27 @@
                     </div>
                 </div>
             </div>
+            <div id="history" class="tab-pane fade">
+                <div class="container">
+                    <div class="row vmargin">
+                        <div class="col-lg-12">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Time</th>
+                                        <th>Contacts</th>
+                                        <th>Cases</th>
+                                        <th>Service Contracts</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="history_table">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="developer" class="tab-pane fade">
                 <div class="container">
                     <div class="row vmargin">
@@ -156,7 +182,7 @@
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!--    <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script> -->
+    <!--    <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script> -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
 
