--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <div class="container">
         <ul class="nav nav-pills">
             <li class="active"><a data-toggle="pill" href="#summary">Summary</a></li>
-            <li><a data-toggle="pill" href="#dashboard">Dashboard</a></li>
             <li><a data-toggle="pill" href="#contracts">Service Contracts</a></li>
             <li><a data-toggle="pill" href="#contacts">Contacts</a></li>
             <li><a data-toggle="pill" href="#cases">Cases</a></li>
             <li><a data-toggle="pill" href="#history">History</a></li>
+            <li><a data-toggle="pill" href="#firebase">Firebase</a></li>
             <li><a data-toggle="pill" href="#developer">Developer</a></li>
             <li>
                 <button id="refreshBtn" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-flash"></span>Refresh</button>
@@ -149,19 +149,18 @@
                     </div>
                 </div>
             </div>
-            <div id="dashboard" class="tab-pane fade">
+            <div id="firebase" class="tab-pane fade">
                 <div class="container">
                     <div class="row vmargin">
                         <div class="col-lg-12">
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th>Time Start</th>
-                                        <th>Time End</th>
-                                        <th>Salesforce Changes</th>
-                                        <th>WeCare Changes</th>
-                                        <th>Delta</th>
-                                        <th>Status</th>
+                                        <th>#</th>
+                                        <th>Time</th>
+                                        <th>Contacts</th>
+                                        <th>Cases</th>
+                                        <th>Service Contracts</th>
                                     </tr>
                                 </thead>
                                 <tbody id="firebase_table">
